# Teme_PAOO

./: CMakeLists.txt  README.md  lab2.cpp  main.cpp
Tema1/: main.cpp
Tema2/: CMakeLists.txt  main.cpp
Tema3/: main.cpp
