cmake_minimum_required(VERSION 3.2)   # the minimal CMake version required
project(Teme_PAOO)                  # the solution name
set(CMAKE_CXX_STANDARD 14)	 # we request C++14
set(CMAKE_CXX_STANDARD_REQUIRED ON)	# we request that CMake verifies the compiler
add_executable(Teme_PAOO lab2.cpp)	 # we specify the name of executable and source (cpp) files                                                                                             in subfolder_01

